# shadertoy-browser

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  azure-pipelines-template.yml  azure-pipelines.yml  rustfmt.toml
.github/workflows/: ci.yml
shadertoy/: Cargo.toml
shadertoy/src/: client.rs  errors.rs  lib.rs  query.rs  types.rs
shadertoy/tests/: client.rs  query.rs
src/: main.rs  render.rs  render_metal.rs  render_wgpu.rs  shadertoy_header.glsl  shadertoy_header_wgpu.glsl  shadertoy_image_footer.glsl  shadertoy_sound_footer.glsl  shadertoy_test.glsl  shadertoy_test3.metal  shadertoy_vs.metal  shadertoy_vs.vert  shadertoy_vs.vert.spv
src/shadertoy/: .gitignore  .travis.yml  Cargo.toml  README.MD  mod.rs
src/shadertoy/src/: client.rs  errors.rs  lib.rs  service.rs  types.rs
src/shadertoy/tests/: query.rs
