[package]
name = "shadertoy-browser"
version = "0.6.1"
description = "Small Shadertoy browser & viewer for Mac"
authors = ["Johan Andersson <repi@repi.se>"]
repository = "https://github.com/repi/shadertoy-browser"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["shaders", "shadertoy", "render", "mac", "metal"]
categories = ["rendering"]
exclude = ["screenshots/*"]
edition = "2018"

[badges]
travis-ci = { repository = "repi/shadertoy-browser" }
appveyor = { repository = "repi/shadertoy-browser" }

[workspace]
members = [
    "shadertoy"
]

[dependencies]
shadertoy = { path = "shadertoy", version = "0.6.1" }
floating-duration = "0.1.2"
chrono = "0.4.9"
rayon = "1.2.0"
clap = "2.33.0"
shaderc = "0.6.1"
serde = "1.0.102"
serde_json = "1.0.41"
winit = "0.19.5"
libc = "0.2.65"
foreign-types = "0.3.2"
rust-base58 = "0.0.4"
colored = "1.8.0"
reqwest = "0.9.22"
error-chain = "0.12.1"
open = "1.3.2"
indicatif = "0.13.0"
thread_profiler = "0.3.0"
log = "0.4.8"
fern = "0.5.9"
sha3 = "0.8.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.19.1"
objc = "0.2.7"
objc-foundation = "0.1.1"
metal = "0.17.0"
spirv_cross = { version = "0.16.0", features = ["msl"] }
core-graphics = "0.17.3"

[profile.release]
debug = true

[features]
default = [ "profiler"]
profiler = ["thread_profiler/thread_profiler"]
