[package]
name = "shadertoy-browser"
version = "0.6.1"
description = "Small Shadertoy browser & viewer for Mac"
authors = ["Johan Andersson <repi@repi.se>"]
repository = "https://github.com/repi/shadertoy-browser"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["shaders", "shadertoy", "render", "mac", "metal"]
categories = ["rendering"]
exclude = ["screenshots/*"]
edition = "2018"

[badges]
travis-ci = { repository = "repi/shadertoy-browser" }
appveyor = { repository = "repi/shadertoy-browser" }

[workspace]
members = [
    "shadertoy"
]

[dependencies]
shadertoy = { path = "shadertoy", version = "0.6.1" }
chrono = "0.4.9"
clap = "2.33.0"
colored = "1.8.0"
anyhow = "*"
fern = "0.5.9"
floating-duration = "0.1.2"
foreign-types = "0.3.2"
indicatif = "0.13.0"
libc = "0.2.65"
log = "0.4.8"
open = "1.3.2"
rayon = "1.2.0"
reqwest = "0.9.22"
rust-base58 = "0.0.4"
serde = "1.0.102"
serde_json = "1.0.41"
sha3 = "0.8.2"
shaderc = "0.6.1"
thread_profiler = "0.3.0"
winit = "0.19.5"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.19.1"
objc = "0.2.7"
objc-foundation = "0.1.1"
metal = "0.17.0"
spirv_cross = { version = "0.16.0", features = ["msl"] }
core-graphics = "0.17.3"

[profile.release]
debug = true

[features]
default = [ "profiler"]
profiler = ["thread_profiler/thread_profiler"]
