[package]
name = "shadertoy-browser"
version = "0.6.1"
description = "Small Shadertoy browser & viewer for Mac"
authors = ["Johan Andersson <repi@repi.se>"]
repository = "https://github.com/repi/shadertoy-browser"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["shaders", "shadertoy", "render", "mac", "metal"]
categories = ["rendering"]
exclude = ["screenshots/*"]
edition = "2018"

[badges]
travis-ci = { repository = "repi/shadertoy-browser" }
appveyor = { repository = "repi/shadertoy-browser" }

[workspace]
members = [
    "shadertoy"
]

[dependencies]
shadertoy = { path = "shadertoy", version = "0.6.1" }
floating-duration = "0.1.2"
chrono = "0.4.19"
rayon = "1.5.0"
clap = "2.33.3"
shaderc = "0.7.2"
serde = "1.0.125"
serde_json = "1.0.64"
winit = "0.24.0"
libc = "0.2.93"
rust-base58 = "0.0.4"
colored = "2.0.0"
reqwest = "0.11.3"
error-chain = "0.12.4"
open = "1.7.0"
indicatif = "0.15.0"
thread_profiler = "0.3.0"
log = "0.4.14"
fern = "0.6.0"
sha3 = "0.9.1"
wgpu = { version ="0.7.1", optional = true }
pollster = { version = "0.2.3", optional = true }
bytemuck = { version = "1.5.1", features = ["derive"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.0"
objc = "0.2.7"
objc-foundation = "0.1.1"
metal = "0.21.0"
spirv_cross = { version = "0.23.1", features = ["msl"] }
foreign-types-shared = "0.1.1"

[profile.release]
debug = true

[features]
default = ["profiler", "wgpu-backend"]
profiler = ["thread_profiler/thread_profiler"]
wgpu-backend = ["wgpu", "pollster", "bytemuck"]
