[package]
name = "shadertoy"
version = "0.6.1"
description = "Rust library wrapping the Shadertoy REST API to be able to easily search through and download Shadertoy assets"
authors = ["Johan Andersson <repi@repi.se>"]
repository = "https://github.com/repi/shadertoy-browser/tree/master/src/shadertoy"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["shaders", "shadertoy", "render", "mac", "metal"]
categories = ["rendering", "api-bindings"]
edition = "2018"

[badges]
travis-ci = { repository = "repi/shadertoy-browser" }
appveyor = { repository = "repi/shadertoy-browser" }

[dependencies]
serde = { version = "1.0.82", features = ["derive"] }
serde_json = "1.0.33"
reqwest = { version = "0.10.0-alpha.1", optional = true, features = ["blocking"] }

[features]
default = []
client = ["reqwest"]


[[test]]
name = "client"
path = "tests/client.rs"
required-features = ["client"]
