[package]
name = "shadertoy"
version = "0.6.1"
description = "Rust library wrapping the Shadertoy REST API to be able to easily search through and download Shadertoy assets"
authors = ["Johan Andersson <repi@repi.se>"]
repository = "https://github.com/repi/shadertoy-browser/tree/master/src/shadertoy"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["shaders", "shadertoy", "render", "mac", "metal"]
categories = ["rendering", "api-bindings"]
edition = "2018"

[badges]
travis-ci = { repository = "repi/shadertoy-browser" }
appveyor = { repository = "repi/shadertoy-browser" }

[dependencies]
reqwest = { version = "0.11.2", features = ["blocking", "json"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
error-chain = "0.12.4"
