[package]
name = "shadertoy"
version = "0.6.1"
description = "Rust library wrapping the Shadertoy REST API to be able to easily search through and download Shadertoy assets."
authors = ["Johan Andersson <repi@repi.se>"]
repository = "https://github.com/repi/shadertoy-browser/tree/master/src/shadertoy"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["shaders", "shadertoy", "render", "mac", "metal"]
categories = ["rendering", "api-bindings"]
workspace = "../.."

[badges]
travis-ci = { repository = "repi/shadertoy-browser" }
appveyor = { repository = "repi/shadertoy-browser" }

[dependencies]
reqwest = "0.8.7"
serde = "1.0.75"
serde_json = "1.0.18"
serde_derive = "1.0.69"
error-chain = "0.12.0"
